<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saicharanreddy.group15_hw05.AddExpenseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addExpense"
        android:id="@+id/addExpenseHeading"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/NameInputHeading"
        android:layout_below="@+id/addExpenseHeading"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameInputAddExpense"
        android:layout_alignBottom="@+id/NameInputHeading"
        android:layout_toEndOf="@+id/NameInputHeading" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/costHeading"
        android:id="@+id/costInputHeading"
        android:layout_below="@+id/NameInputHeading"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/costInput"
        android:layout_alignBottom="@+id/costInputHeading"
        android:layout_toEndOf="@+id/costInputHeading"
        android:numeric="integer"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dateHeading"
        android:id="@+id/dateHeading"
        android:layout_below="@+id/costInputHeading"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePicker"
        android:id="@+id/datePicker"
        android:layout_alignTop="@+id/dateHeading"
        android:layout_alignEnd="@+id/costInput"
        android:background="#29bcb9"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/recepit"
        android:id="@+id/Receipt"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/datePicker"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagePicker"
        android:id="@+id/imagePicker"
        android:layout_alignTop="@+id/Receipt"
        android:layout_toStartOf="@+id/datePicker"
        android:background="#29bcb9"
        android:textColor="@android:color/white" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addExpenseBtn"
        android:id="@+id/AddExpenseButton"
        android:background="#29bcb9"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="350px"
        android:layout_height="350px"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imagePicker"
        android:layout_below="@+id/imagePicker"
        android:layout_alignEnd="@+id/datePicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/date"
        android:layout_alignBottom="@+id/dateHeading"
        android:layout_alignStart="@+id/nameInputAddExpense"
        android:autoText="false" />
</RelativeLayout>

    <!--
               *Assignment : Home Work 5
               * File Name : Group15_HW05
               * Full Name : Manideep Reddy Nukala, Sai Charan Reddy Vallapureddy
               * -->
