<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saicharanreddy.group15_hw05.EditExpensesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editExpense"
        android:id="@+id/editExpenseHeading"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editExpenseNameHead"
        android:id="@+id/editExpenseNameHead"
        android:layout_below="@+id/editExpenseHeading"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editExpenseName"
        android:layout_alignBottom="@+id/editExpenseNameHead"
        android:layout_toEndOf="@+id/editExpenseNameHead" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editExpenseCost"
        android:id="@+id/EditExpenseCostHeading"
        android:layout_below="@+id/editExpenseNameHead"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editExpenseCost"
        android:layout_alignBottom="@+id/EditExpenseCostHeading"
        android:layout_toEndOf="@+id/editExpenseNameHead"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editExpenseDateHead"
        android:id="@+id/EditExpenseDateHead"
        android:layout_below="@+id/EditExpenseCostHeading"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editExpenseDatePicker"
        android:id="@+id/editExpenseDatePicker"
        android:layout_alignBottom="@+id/EditExpenseDateHead"
        android:layout_alignEnd="@+id/editExpenseCost"
        android:textColor="@android:color/white"
        android:background="#29bcb9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editExpenseDate"
        android:layout_alignBottom="@+id/EditExpenseDateHead"
        android:layout_toEndOf="@+id/EditExpenseDateHead" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ReceiptHead"
        android:id="@+id/Receipt"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/EditExpenseDateHead"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editImage"
        android:id="@+id/editExpenseImagePicker"
        android:background="#29bcb9"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/Receipt"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editImageView"
        android:layout_below="@+id/editExpenseImagePicker"
        android:layout_toEndOf="@+id/editExpenseHeading"
        android:layout_marginTop="56dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveChanges"
        android:id="@+id/saveChanges"
        android:layout_marginBottom="33dp"
        android:background="#29bcb9"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/editExpenseImagePicker" />
</RelativeLayout>
    <!--
                   *Assignment : Home Work 5
                   * File Name : Group15_HW05
                   * Full Name : Manideep Reddy Nukala, Sai Charan Reddy Vallapureddy
                   * -->
