<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/expenseName"
        android:id="@+id/expenseName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Cost"
        android:id="@+id/costInputHeading"
        android:layout_below="@+id/expenseName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/date"
        android:layout_below="@+id/costInputHeading"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editButton"
        android:src="@drawable/ic_create_black_24dp"
        android:layout_marginEnd="30dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />
    <View style="@style/Divider.Horizontal"/>
</RelativeLayout>
    <!--
                   *Assignment : Home Work 5
                   * File Name : Group15_HW05
                   * Full Name : Manideep Reddy Nukala, Sai Charan Reddy Vallapureddy
                   * -->